首页大图支持全局配置，添加一些建议

--- a/docs/80.关于/06.关于 - 本站/20.本站 - 记录阅读文章模块.md
+++ b/docs/80.关于/06.关于 - 本站/20.本站 - 记录阅读文章模块.md
@@ -31,6 +31,8 @@ tags:
 
 ## 组件添加
 
+> 建议：本内容代码块比较长，可以点击代码块的右侧箭头来折叠，然后点击复制图标进行复制即可。
+
 在 docs/.vuepress/components 文件夹下创建 LastReadingPopup.vue 文件，如果没有 components 文件夹，请创建。
 
 添加如下内容：
