--- a/docs/80.关于/06.关于 - 本站/22.本站 - 私密文章模块.md
+++ b/docs/80.关于/06.关于 - 本站/22.本站 - 私密文章模块.md
@@ -51,6 +51,8 @@ tags:
 
 ## 组件添加
 
+> 建议：本内容代码块比较长，可以点击代码块的右侧箭头来折叠，然后点击复制图标进行复制即可。
+
 首先在 .vuepress/config.js 的 head 模块添加在线图标。图标库来自阿里云：`https://www.iconfont.cn/`。
 
 如果你没有账号，或者觉得添加比较麻烦，就使用我的图标库地址，**当你发现图标失效了，就请来这里获取新的地址，如果还没有更新，请在评论区留言**。
