--- a/docs/80.关于/06.关于 - 本站/24.本站 - 导航站模块.md
+++ b/docs/80.关于/06.关于 - 本站/24.本站 - 导航站模块.md
@@ -34,6 +34,8 @@ tags:
 
 ## Vue组件
 
+> 建议：本内容代码块比较长，可以点击代码块的右侧箭头来折叠，然后点击复制图标进行复制即可。
+
 导航卡片需要一个 Vue 组件，在 docs/.vuepress/components 下创建 `Card.vue` 组件，如果没有 `components ` 文件夹，请创建。
 
 组件添加如下内容：
