--- a/docs/80.关于/06.关于 - 本站/26.本站 - 首页大图模块.md
+++ b/docs/80.关于/06.关于 - 本站/26.本站 - 首页大图模块.md
@@ -53,6 +53,8 @@ tags:
 
 ## 组件添加
 
+> 建议：本内容代码块比较长，可以点击代码块的右侧箭头来折叠，然后点击复制图标进行复制即可。
+
 在 docs/.vuepress/components 目录中创建 `IndexBigImg.vue` 组件，如果没有 `components` 文件夹，则请创建。
 
 在组件添加如下内容：
@@ -961,19 +963,15 @@ desc 的字体大小，默认 1.4rem。提示：原主题是 1.1rem。
 
 气泡的个数，默认 200 个。
 
-## 首页额外动态图
+## 额外动态大图
 
 上面的所有配置是属于 **静态大图效果**，如果你喜欢我的 **动态** 首页背景图：全背景、颜色随时间变化、日历显示当天、时间同步当前、播放音乐有音谱 ...（可能时间久远，我也许换背景图了🤣）
 
 ![](https://cdn.staticaly.com/gh/Kele-Bingtang/static@master/user/20211218235045.png)
 
-目前我仅使用在首页，如果进入文章页，则恢复原来的背景图。**为什么不全局使用呢？**
-
-我用过，下面也有注释说明如何全局配置，但是夜晚时候的右侧标题字体会被背景色同化（看不见），所以就当首页的背景图使用。文章页背景图利用官方给的属性来配置。
-
 ### 静态资源获取
 
-首先需要下载一些需要用到的图片，总共 1.47MB。[点击前往下载地址](https://www.youngkbt.cn/download/light/%E7%BD%91%E7%AB%99%E6%BA%90%E7%A0%81/)，找到 `fantasy.rar` 压缩包并下载。
+首先需要下载一些需要用到的图片，总共 1.47MB（如果你觉得 1.47MB 太大，可以进行图片压缩）。[点击前往下载地址](https://www.youngkbt.cn/download/light/%E7%BD%91%E7%AB%99%E6%BA%90%E7%A0%81/)，找到 `fantasy.rar` 压缩包并下载。
 
 下载后将其解压到 public 目录下，解压后的文件夹叫 `fantasy`，不是请改名。如图：
 
@@ -1000,12 +998,18 @@ desc 的字体大小，默认 1.4rem。提示：原主题是 1.1rem。
 <script>
 export default {
   mounted() {
-    // 如果使用 IndexBigImg.vue，则去掉该组件提供的时间罩
-    this.clearBannerColor();
-    this.mountedElement();
-    this.init();
+    // 只有一个 fantasy 元素，防止重复加载多个图片
+    if (document.getElementsByClassName("fantasy").length == 1) {
+      // 如果使用 IndexBigImg.vue，则去掉该组件提供的时间罩
+      this.clearBannerColor();
+      // 如果是在首页注册该组件，则挂载到正确的位置
+      if (this.$attrs.index) {
+        this.mountedElement();
+      }
+      this.init();
+    }
   },
-  methods: {
+  methods: { 
     init() {
       var cvs = document.getElementById("cvs");
       if (!cvs) {
@@ -1566,16 +1570,13 @@ export default {
 
       window.requestAnimationFrame(render);
     },
+    // 针对首页挂载元素
     mountedElement() {
-      var fantasy = document.getElementsByClassName("fantasy")[0];
-      document.getElementsByClassName("banner")[0].appendChild(fantasy);
-      // 下面是全局背景图，如果使用，则取 plugins 里以组件名来注册插件
-      // let interval = setInterval(() => {
-      //   let theme = document.getElementsByClassName("theme-container")[0];
-      //   if (theme) {
-      //     theme.appendChild(fantasy);
-      //   } 
-      // }, 100);
+      let fantasy = document.getElementsByClassName("fantasy")[0];
+      let banner = document.getElementsByClassName("banner")[0];
+      // 去掉黑色栅格背景
+      banner.style.background = "";
+      fantasy && banner && banner.appendChild(fantasy);
     },
     clearBannerColor() {
       let bannerColor = document.getElementsByClassName("banner-color")[0];
@@ -1614,17 +1615,17 @@ export default {
 </style>
 ```
 
-该大图左侧的屏幕展示如下的图片，可以在 264 自行更换位置截取自己喜欢的一角，或者换成自己喜欢的图片。
+该大图左侧的电脑屏幕展示如下的图片（看页面左边），可以在 269 更换位置来截取自己喜欢的一角，或者换成自己喜欢的图片。
 
 ![](/fantasy/screen.png)
 
-### 引入配置
+### 首页配置
 
-打开 docs/index.md 文档，添加如下内容：
+如果你只想在首页配置该大图，不想在全局的背景使用（全局背景配置请看 [全局配置](#全局配置)），则打开 docs/index.md 文档，添加如下内容：
 
 ```js
 <ClientOnly>
-  <Fantasy />
+  <Fantasy index="true" />
 </ClientOnly>
 ```
 
@@ -1633,15 +1634,60 @@ export default {
 ```js
 <ClientOnly>
   <IndexBigImg />
-  <Fantasy />
+  <Fantasy index="true" />
 </ClientOnly>
 ```
 
-`Fantasy` 组件的图片会覆盖 `IndexBigImg` 组件的图片，而其他的样式和功能都会保留。
+`Fantasy` 组件的图片会覆盖 `IndexBigImg` 组件的图片，而 `IndexBigImg` 组件其他的样式和功能都会保留。
 
-> 我的建议
+### 全局配置
 
-如果使用我的额外动态图，则把 `bgTimeColorArray` 数组的内容都改为 transparent，如下：
+当然你也可以像我一样不仅在首页配置，也在全局背景配置（2022.7.23），那么先把上面 [首页配置](#首页配置) 的 `<Fantasy index="true" />` 注释或者去掉，然后在 docs/.vuepress/config.js（新版是 config.ts）的 plugins 中添加插件配置。
+
+添加如下内容：
+
+:::: tabs :options="{ useUrlFragment: false }"
+
+::: tab JS
+
+```js
+module.exports = {
+    plugins: [
+        {
+            name: 'custom-plugins',
+            globalUIComponents: ["Fantasy"]
+        }
+    ],
+}
+```
+
+:::
+
+::: tab TS
+
+```ts
+import { UserPlugins } from 'vuepress/config'
+plugins: <UserPlugins>[
+    [
+    	{
+        	name: 'custom-plugins',
+        	globalUIComponents: ["Fantasy"]
+    	}
+    ]
+]
+```
+
+:::
+
+::::
+
+最后记得重启项目。
+
+> 如果不仅进行首页配置，也进行全局配置，那么以全局配置的为准，即全局配置会覆盖首页配置，所以你完全可以两个都配置，但是不建议这么做，而是建议注释掉其中一个配置以便日后进行切换。
+
+### 我的建议
+
+如果使用额外动态大图，则把 `bgTimeColorArray` 数组的内容都改为 transparent，如下：
 
 ```js
 indexImg: {
@@ -1651,7 +1697,7 @@ indexImg: {
 }
 ```
 
-因为额外动态图自带时间的颜色，不需要额外添加。
+因为额外动态大图自带该功能，不需要额外添加。
 
 ## 结束语
 
