--- a/docs/80.关于/06.关于 - 本站/30.本站 - 全局时间提示模块.md
+++ b/docs/80.关于/06.关于 - 本站/30.本站 - 全局时间提示模块.md
@@ -51,6 +51,8 @@ tags:
 
 ## 添加Vue组件
 
+> 建议：本内容代码块比较长，可以点击代码块的右侧箭头来折叠，然后点击复制图标进行复制即可。
+
 在 docs/.vuepress/components 目录下创建 Vue 组件：`GlobalTip.vue`。如果不存在 components 目录，则请创建。
 
 添加如下内容：
