Update 23.RabbitMQ - 优先级.md

--- a/docs/30.框架/20.中间件 - RabbitMQ/23.RabbitMQ - 优先级.md
+++ b/docs/30.框架/20.中间件 - RabbitMQ/23.RabbitMQ - 优先级.md
@@ -194,7 +194,7 @@ public class QueueConfig {
     @Bean("queue")
     public Queue queue() {
         Map<String, Object> args = new HashMap<>(3);
-        params.put("x-max-priority", 10);
+        args.put("x-max-priority", 10);
         return QueueBuilder.durable("priority_queue").withArguments(args).build();
     }
     
